<resources>
    <string name="app_name">Vrescie</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">IconVrescie</string>
    <string name="iconvrescie">IconVrescie</string>
    <string name="nowi_znajomi">Nowi znajomi</string>
    <string name="logotype">Logotype</string>
    <string name="emptyString" />
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="sign_up">Sign up!</string>
    <string name="type_your_password">Type your password</string>
    <string name="type_your_email">Type your email</string>
    <string name="sign_in">Sign in</string>
    <string name="nextBtn">NextBtn</string>
    <string name="login_with_google">Login with Google</string>
    <string name="default_web_client_id">677354439837-2ph227rcl42os38a4iotjf3d2gicuvcc.apps.googleusercontent.com</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="already_registered">Already registered?</string>
    <string name="register_with_google">Register with google</string>
    <string name="register">Register</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="log_in">Zaloguj się</string>
    <string name="forgot_password">Nie pamiętam hasła</string>
    <string name="registration">Zarejestruj się</string>
    <string name="i_have_account">Mam już konto</string>
    <string name="log_in_with_google">Zarejestruj się za pomocą konta google</string>
    <string name="or">lub</string>
    <string name="no_share">Nigdy nie udostępniamy nic bez twojej zgody</string>
    <string name="policy_1">Rejestrując się potwierdasz, że akceptujesz nasz Regulamin. Dowiedz się, jak przetwarzamy Twoje dane z Polityki prywatności</string>
    <string name="log_in_with_google_pl">Zaloguj się za pomocą konta google</string>
    <string name="password_2">Powtórz hasło</string>
    <string name="type_your_email_and_password_pl">Podaj swój email i hasło</string>
    <string name="anonymous_chat_pl">Anonimowy czat</string>
    <string name="implicity_chat_pl">Potwierdzone czaty</string>
    <string name="profile_pl">Profil</string>
    <string name="random_pl">Losuj</string>
    <string name="connect_rep">Połącz ponownie</string>
    <string name="loading_text">Czekaj!!!\n\nTrwa szukanie osoby odpowiedniej dla twoich preferencji</string>
    <string name="write_message">Wprowadź wiadomość</string>
    <string name="cancel_button">CancelButton</string>
    <string name="send_message">SendMessage</string>
    <string name="type_your_name_and_gender_pl">Podaj swoje imię i wybierz płeć</string>
    <string name="name_pl">Imię:</string>
    <string name="continue_pl">Kontynuuj</string>
    <string name="female">Kobieta</string>
    <string name="male">Mężczyzna</string>
    <string name="type_your_age_pl">Wybierz swój wiek:</string>
    <string name="age_pl">Wiek:</string>
    <string name="gender">Płeć:</string>
    <string name="email_pl">Email:</string>
    <string name="edit_profile_pl">Edytuj profil</string>
    <string name="join_time_pl">Data dołączenia:</string>
    <string name="message_in_implicit_chats">Jeszcze nic tu nie ma :(\nPostaraj się o polubienia innych użytkowników w anonimowym czacie by pojawiły się tu konwersacje</string>
    <string name="confirm">Potwierdź</string>
    <string name="type_your_name_pl">Podaj swoje imię</string>
    <string name="demand_pl">Wymagam</string>
    <string name="not_demand_pl">Nie wymagam</string>
    <string name="v_czat_pl">V-czat</string>
    <string name="chats_pl">Konwersacje</string>
</resources>