<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EditProfileFragment">


    <ImageView
        android:id="@+id/imageViewLogotype"
        android:layout_width="198dp"
        android:layout_height="47dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/logotype"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotype_vreescie_svg" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:hint="@string/type_your_name_pl" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/confirm"
                android:padding="16dp"
                android:insetBottom="0dp"

                android:layout_alignParentBottom="true"
                app:backgroundTint="@android:color/black"
                app:cornerRadius="0dp"
                android:textColor="@color/white"
                />

        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>